force-app/main/default/objects/Retail_supplier_product__c/Retail_supplier_product__c.object-meta.xml
<CustomObject>
    <label>Retail supplier product</label>
    <nameField>
        <displayFormat>RSP-{0000}</displayFormat>
        <label>Product supplied</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail supplier products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>