force-app/main/default/objects/Retail_supplier_product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Retail_Product__c.Retail_Product_Group__c</field>
            <operation>equals</operation>
            <valueField>$Source.Product_Group__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Retail_Product__c</referenceTo>
    <relationshipLabel>Retail supplier products</relationshipLabel>
    <relationshipName>Retail_supplier_products</relationshipName>
    <type>Lookup</type>
</CustomField>