force-app/main/default/objects/Retail_supplier_product__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Group</label>
    <referenceTo>Retail_Product_Group__c</referenceTo>
    <relationshipLabel>Retail supplier products</relationshipLabel>
    <relationshipName>Retail_supplier_products</relationshipName>
    <type>Lookup</type>
</CustomField>