force-app/main/default/objects/Retail_supplier_product__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Retail_Supplier__c</referenceTo>
    <relationshipLabel>Retail supplier products</relationshipLabel>
    <relationshipName>Retail_supplier_products</relationshipName>
    <type>Lookup</type>
</CustomField>